--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,5 +14,8 @@ jobs:
           echo "Following is the Information About the Cloned Repo"
           echo "Repository Name: ${{github.repository}}"
           echo "Repository Owner: ${{github.owner}}"
-
+          echo branch
+          git log 
+          git config --local --list
+          
 
